frontend/test/should_pass/retype_015.grg
using retype_model_001;

rule r {
	x:TYPE1;
	
	optional {
		modify {
			y:TYPE2<x>;
		}
	}
	
	modify {}
}

