frontend/test/should_fail/retype_019.grg
using retype_model_001;

rule r {
	x:TYPE1;
	
	alternative {
		First {
			modify {
				y:TYPE2<x>;
			}
		}
		Second {
			modify {}
		}
	}
	
	modify {
		y:TYPE3<x>;
	}

}

